Fix dropdown menu shrinking body height on mobile

--- a/src/styles/SubredditsPage.scss
+++ b/src/styles/SubredditsPage.scss
@@ -233,7 +233,7 @@
           padding: 0;
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: var(--selected-ul-gap);
           margin: 0;
           // max-height: calc(100vh - 260px - 50px);
           overflow: auto;
